[package]
name = "bms-preview-generator"
version = "0.1.0"
edition = "2024"


[dependencies]
bms-rs = { git = "https://github.com/MikuroXina/bms-rs/", version = "0.10.1", features = ["bmson"] }
clap = { version = "4.5.53", features = ["derive"] }
encoding_rs = "0.8.35"
symphonia = { version = "0.5.5", features = ["opt-simd"]}
vorbis_rs = { version = "0.5.5", features = ["stream-serial-rng"] }
rubato = "1.0.0"
audioadapter-buffers = "2.0.0"
itertools = "0.14.0"
log = "0.4.29"
thiserror = "2.0.17"
rayon = "1.11.0"
walkdir = "2.5.0"
